# mckit-meshes

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  README.rst  justfile  noxfile.py  pylintrc.toml  pyproject.toml  pytest.toml  ruff.toml  ty.toml
.github/: dependabot.yml
.github/workflows/: combine-prs.yml  labeler.yml  poetry-update.yml  release-drafter.yml  release.yml  tests.yml
dev/: clear-prev-dist-info.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  mckit_meshes.cli.rst  mckit_meshes.utils.rst
notebooks/dvp/: 2026-02-10-check-lp14-wwinp.ipynb  2026-02-10-check-lp14-wwinp.py
notebooks/plotting/: 25-11-06-dvp-demo-trt-plotm.ipynb  25-11-06-dvp-demo-trt-plotm.py  25-11-11-dvp-demo-trt-ps-plots.ipynb  25-11-11-dvp-demo-trt-ps-plots.py  25-11-13-dvp-plot-meshes-on-ps.ipynb  25-11-13-dvp-plot-meshes-on-ps.py  25-12-17-dvp-demo-simple-ps.ipynb  25-12-17-dvp-demo-simple-ps.py  BriefTicksAroundOneTicker.py  ECDF estimations.ipynb  ECDF estimations.py  README.rst  __init__.py  plot.py  read_plotm_file.py
notebooks/plotting/tests/: conftest.py  test_read_plotm_file.py
src/mckit_meshes/: __init__.py  __main__.py  fmesh.py  m_file_iterator.py  mesh2com.py  particle_kind.py  plot.py  read_plotm_file.py  version.py  wgtmesh.py
src/mckit_meshes/cli/: __init__.py  _logging.py  addnpz.py  invwgt.py  logging.py  logging_setup.py  merge_weights.py  mesh2npz.py  mesh2wgt.py  normalize_weights.py  npz2vtk.py  runner.py  split_mesh_file.py  wgt_drop_ebins.py
src/mckit_meshes/cli/commands/: __init__.py  addnpz.py  common.py  invwgt.py  merge_weights.py  mesh2npz.py  mesh2wgt.py  normalize_weights.py  npz2vtk.py  split_mesh_file.py
src/mckit_meshes/mesh/: geometry_spec.py
src/mckit_meshes/plot/: __init__.py  _plot.py  brief_ticks_around_one_ticker.py  check_coordinate_plane.py  plot.py  read_plotm_file.py  styling.py
src/mckit_meshes/utils/: __init__.py  _io.py  cartesian_product.py  io.py  no_daemon_process.py  rebin.py  testing.py  utils.py
src/tests/: test_fmesh.py  test_mesh2com.py  test_package.py  test_read_plotm_file.py  test_wgtmesh.py
src/tests/cli/: test_mesh2npz.py  test_npz2vtk.py  test_runner.py
src/tests/mesh/: test_geometry_spec.py
src/tests/utils/: test_resource.py
tests/: conftest.py  test_fmesh.py  test_m_file_iterator.py  test_main.py  test_mesh2com.py  test_package.py  test_particle_kind.py  test_read_plotm_file.py  test_wgtmesh.py
tests/cli/: conftest.py  test_addnpz.py  test_invwgt.py  test_logging.py  test_merge_weights.py  test_mesh2npz.py  test_mesh2wgt.py  test_normalize_weights.py  test_npz2vtk.py  test_runner.py  test_split_mesh_file.py  utils.py
tests/data/: 1004.npz  2004.npz  ng-2.3.5.ps  plotm-1.ps  wwinp
tests/data/plot/: cube-tilted-wv.ps  cube-tilted.ps  cube-wv.ps  cube.ps  sphere-wv.ps  sphere.ps
tests/mesh/: test_geometry_spec.py
tests/plot/: test_check_coordinate_plane.py  test_read_plotm_file.py
tests/utils/: __init__.py  test_cartesian_product.py  test_io.py  test_no_daemon_process.py  test_rebin.py  test_resource.py
tools/: clear-prev-dist-info.py  reset-pyenv
