[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[project]
name = "mckit-meshes"
version = "0.3.1.dev1"
requires-python = ">=3.11,<3.14" # connectorx==0.4.3 prevents <4
description = "Python tools to work with MCNP meshtallies and weight meshes."
authors = [{ name = "dvp2015", email = "dmitri_portnov@yahoo.com" }]
readme = "README.rst"
license = { text = "MIT" }
keywords = ["MCNP", "mesh", "weights", "variance reduction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "cyclopts>=3.24.0",
    "eliot>=1.17.5",
    "numpy (>=2.3.1)",
    "pyevtk (>=1.4.1)",
    "toolz (>=0.11.2)",
]

[project.urls]
homepage = "https://github.com/MC-kit/mckit-meshes"
repository = "https://github.com/MC-kit/mckit-meshes"
documentation = "https://mckit-meshes.readthedocs.io"
Changelog = "https://github.com/MC-kit/mckit-meshes/releases"


[project.scripts]
mckit-meshes = "mckit_meshes.__main__:main"

[dependency-groups]
dev = [
    { include-group = "style" },
    { include-group = "test" },
    "eliot-tree>=24.0.0",
]
style = [
    { include-group = "pre_commit" },
    { include-group = "ruff" },
    { include-group = "mypy" },
    { include-group = "lint" },
    { include-group = "pyright" },
]
pre_commit = ["pre-commit>=4.3.0"]
ruff = ["ruff>=0.0.259"]
mypy = [
    "mypy>=1.2.0",
    "pep8-naming>=0.12.1",
    "types-setuptools>=80.9.0.20250529",
]
lint = [
    "pylint",
    "pylint-per-file-ignores",
]
pyright = [
    "pyright>=1.1.406",
]
test = [
    "pytest>=8.4.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.14.0",
    "pytest-durations>=1.5.2",
    "pytest-emoji>=0.2.0",
    "xdoctest>=1.2.0",
    { include-group = "coverage" }, # coverage may be used on its own, see GHA test
]
coverage = ["coverage[toml]>=7.9.2"]
# environments not in dev
typeguard = ["typeguard>=4.1.5"]
docs = [
    "rstcheck[toml,sphinx]>=6.2.5",
    "sphinx>=8.2.3",
    "sphinx-autodoc-typehints>=3.2.0",
    "sphinx-autobuild>=2025.8.25",
    "esbonio>=0.16.5",
    "sphinx-togglebutton>=0.3.2",
]
analyze = ["jupyterlab>=4.2.5", "jupytext>=1.16.4"]

[tool.pytest.ini_options]
minversion = "8.4"
cache_dir = '.cache/pytest'
norecursedirs = '''
*.egg-info
.*
build
data
dist
docs/_build
docs/examples
htmlcov
notebooks
tools
wrk
'''
python_functions = "test_*  profile_*"
addopts = '''
-ra
-q
--tb=short
--doctest-modules
--strict-markers
--ignore setup.py
--failed-first
--xdoctest
--pytest-durations-min=1
--pytest-resultlog="pytest-result.log"
'''
doctest_optionflags = "ELLIPSIS NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ALLOW_UNICODE ALLOW_BYTES NUMBER"
testpaths = ["tests", "src"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
# xfail tests that pass should fail the test suite
xfail_strict = true
filterwarnings = [
    "error",
    "ignore:.*not typechecking multipledispatch.dispatcher.*UserWarning",
    'ignore:.*io.FileIO \[closed\]',
    'ignore:.*Implicit None on return values:DeprecationWarning',
]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

[tool.xdoctest]
quiet = true
options = ""

[tool.coverage.paths]
source = ["src", ".nox/*/site-packages"]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["*_tab.py", "**/__init__.py", "tools/*.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80                                      # TODO dvp: increase limit to 100 with code maturing
omit = ["*_tab.py", "**/__init__.py", "**/types.py"]
# Regexes for lines to exclude from consideration
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self.debug",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
ignore_errors = true
sort = "Cover"


# MyPy config
# See https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
#     https://dev.to/tusharsadhwani/the-comprehensive-guide-to-mypy-561m
[tool.mypy]
python_version = "3.13"
cache_dir = ".cache/mypy"
error_summary = true
# strict = true     # TODO dvp: uncomment this to get strict control
files = "src/**/*.py"
follow_imports = "silent"
# namespace_packages = true
show_error_codes = true
show_error_context = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true


[[tool.mypy.overrides]]
module = [
    "IPython.core.magic",
    "IPython.core.magic_arguments",
    "click",
    "click.testing",
    "cyclopts",
    "dask.*",
    "duckdb",
    "eliot",
    "eliot.*",
    "loguru",
    "mckit_nuclides.*",
    "msgspec",
    "multipledispatch",
    "nox",
    "numpy",
    "numpy.testing",
    "pandas",
    "polars",
    "pyevtk.*",
    "pytest",
    "rich",
    "rich.*",
    "scipy.constants",
    "scipy.sparse",
    "tomli",
    "tomllib",
    "toolz.*",
    "xdoctest",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tomllib"]
allow_redefinition = true
disable_error_code = "no-redef"

[tool.jupytext]
# https://jupytext.readthedocs.io/en/latest/config.html
# Pair ipynb notebooks to py:percent text notebooks
formats = "ipynb,py:percent"

[tool.creosote]
paths = ["src"]
deps-file = "pyproject.toml"
sections = ["project.dependencies"]

[tool.rstcheck]
report_level = "ERROR"
ignore_messages = '(Unknown directive type "(todo|todolist|automodule)"\.$)'
