[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.9.2,<0.10" ]

[project]
name = "mckit-meshes"
version = "0.3.1.dev6"
description = "Python tools to work with MCNP meshtallies and weight meshes."
readme = "README.rst"
keywords = [ "MCNP", "mesh", "variance reduction", "weights" ]
license = { text = "MIT" }
authors = [ { name = "dvp2015", email = "dmitri_portnov@yahoo.com" } ]
requires-python = ">=3.11,<3.14" # connectorx==0.4.3 prevents <4
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "cyclopts>=3.24",
  "eliot>=1.17.5",
  "matplotlib>=3.10.7", # TODO @dvp: move to optional deps (doctest needs this here)
  "numpy>=2.3",
  "pyevtk>=1.4",
  "toolz>=0.11",
]

optional-dependencies.plot = [
  "jupyterlab>=4.4.10",
  "jupytext>=1.18.1",
  "matplotlib>=3.10.7",
]
urls.Changelog = "https://github.com/MC-kit/mckit-meshes/releases"
urls.documentation = "https://mckit-meshes.readthedocs.io"
urls.homepage = "https://github.com/MC-kit/mckit-meshes"
urls.repository = "https://github.com/MC-kit/mckit-meshes"
scripts.mckit-meshes = "mckit_meshes.__main__:main"

[dependency-groups]
dev = [
  "eliot-tree>=24",
  { include-group = "style" },
  { include-group = "test" },
]
test = [
  "pytest>=9",
  "pytest-durations>=1.5.2",
  "pytest-emoji>=0.2",
  "pytest-mock>=3.14",
  "xdoctest>=1.2",
  { include-group = "coverage" }, # coverage may be used on its own, see GHA test
]
docs = [
  "esbonio>=0.16.5",
  "rstcheck[sphinx,toml]>=6.2.5",
  "sphinx>=8.2.3",
  "sphinx-autobuild>=2025.8.25",
  "sphinx-autodoc-typehints>=3.2",
  "sphinx-togglebutton>=0.3.2",
]
style = [
  { include-group = "lint" },
  { include-group = "mypy" },
  { include-group = "pre_commit" },
  { include-group = "pyright" },
  { include-group = "ruff" },
]
pre_commit = [ "pre-commit>=4.3" ]
ruff = [ "ruff>=0.0.259" ]
mypy = [
  "mypy>=1.2",
  "pep8-naming>=0.12.1",
  "types-setuptools>=80.9.0.20250529",
]
lint = [
  "pylint",
  "pylint-per-file-ignores",
]
pyright = [
  "pyright>=1.1.406",
]
coverage = [ "coverage[toml]>=7.9.2" ]
# environments not in dev
typeguard = [ "typeguard>=4.1.5" ]
analyze = [ "jupyterlab>=4.2.5", "jupytext>=1.16.4" ]

[tool.coverage.paths]
source = [ "src", ".nox/*/site-packages" ]

[tool.coverage.run]
branch = true
source = [ "src" ]
omit = [ "*_tab.py", "**/__init__.py", "tools/*.py" ]
parallel = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80                                        # TODO dvp: increase limit to 100 with code maturing
omit = [ "*_tab.py", "**/__init__.py", "**/types.py" ]
# Regexes for lines to exclude from consideration
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about missing debug-only code:
  "def __repr__",
  "if self.debug",
  # Don't complain if tests don't hit defensive assertion code:
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain if non-runnable code isn't run:
  "if 0:",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
ignore_errors = true
sort = "Cover"

# MyPy config
# See https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
#     https://dev.to/tusharsadhwani/the-comprehensive-guide-to-mypy-561m

[tool.mypy]
python_version = "3.13"
cache_dir = ".cache/mypy"
error_summary = true
# strict = true     # TODO dvp: uncomment this to get strict control
files = "src/**/*.py"
follow_imports = "silent"
# namespace_packages = true
show_error_codes = true
show_error_context = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
  "IPython.core.magic",
  "IPython.core.magic_arguments",
  "click",
  "click.testing",
  "cyclopts",
  "dask.*",
  "duckdb",
  "eliot",
  "eliot.*",
  "loguru",
  "mckit_nuclides.*",
  "msgspec",
  "multipledispatch",
  "nox",
  "numpy",
  "numpy.testing",
  "pandas",
  "polars",
  "pyevtk.*",
  "pytest",
  "rich",
  "rich.*",
  "scipy.constants",
  "scipy.sparse",
  "tomli",
  "tomllib",
  "toolz.*",
  "xdoctest",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [ "tomllib" ]
allow_redefinition = true
disable_error_code = "no-redef"

[tool.xdoctest]
quiet = true
options = ""

[tool.jupytext]
# https://jupytext.readthedocs.io/en/latest/config.html
# Pair ipynb notebooks to py:percent text notebooks
formats = "ipynb,py:percent"

[tool.creosote]
paths = [ "src" ]
deps-file = "pyproject.toml"
sections = [ "project.dependencies" ]

[tool.rstcheck]
report_level = "ERROR"
ignore_messages = "(Unknown directive type \"(todo.*|automodule)\".$)"
